--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'Technos'; 
+  src: url('../../assets/technos/Technos.otf') format('opentype'); 
+  font-style: normal;
+}
 body {
   margin: 0;
   background-image: url("./assets/Lotus.jpg"); 
