--- a/src/components/hud/hud.css
+++ b/src/components/hud/hud.css
@@ -1,8 +1,8 @@
 :root {
-  --text-color: #f0f0f0;
-  --primary-color: #00aaff; 
+  --text-color: #545353;
+  --primary-color: #1BABDC; 
   --secondary-color: #2c3e50;
-  --background-color: rgba(44, 62, 80, 0.85); 
+  --background-color: #ffffff; 
 }
 @font-face {
   font-family: 'Technos'; 
@@ -23,11 +23,11 @@
 
 .score {
   font-family: 'Technos', sans-serif; 
-  font-size: 2rem; 
+  font-size: 3.5rem; 
   margin-bottom: 10px;
-  color: var(--text-color);
-  font-weight: 700;
-  text-shadow: 0 0 8px var(--primary-color), 0 0 2px rgba(0, 0, 0, 0.7); 
+  color: #E1E0E0;
+  font-weight: 300;
+  text-shadow: 0 0 8px var(--primary-color), 0 0 2px rgba(26, 107, 249, 1); 
   animation: pulse 2s infinite ease-in-out;
 }
 
@@ -43,6 +43,10 @@
   max-width: 800px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5); 
   backdrop-filter: blur(5px); 
+}
+
+.category{
+  color:#ffffff;
 }
 
 .answers,
