--- a/src/components/hud/hud.css
+++ b/src/components/hud/hud.css
@@ -4,11 +4,7 @@
   --secondary-color: #2c3e50;
   --background-color: #ffffff; 
 }
-@font-face {
-  font-family: 'Technos'; 
-  src: url('../../assets/technos/Technos.otf') format('opentype'); 
-  font-style: normal;
-}
+
 .hud {
   position: absolute;
   top: 20px;
@@ -19,6 +15,25 @@
   padding: 0 20px;
   box-sizing: border-box;
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5); 
+}
+
+.pause-button {
+  position: absolute;
+  top: 0;
+  right: 20px; 
+  width: 40px; 
+  height: 40px; 
+  border-radius: 50%; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  z-index: 10; 
+  padding: 0;
+}
+.pause-icon-img {
+    width: 100%; 
+    height: 100%;   
 }
 
 .score {
