--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+/**
+ * Feuille de style principale de l'application.
+ * Elle importe les polices de caractères personnalisées et définit
+ * les styles de base qui s'appliquent à l'ensemble du document.
+ */
 
 @font-face {
   font-family: 'Technos'; 
